CSS/homepage.css
/* ... */
.connect-text .buttons {
    display: flex;

}


.resume-btn,
.email-btn,
.contact-btn  {
    background-color: var(--red-color);
    border: none;
    font-size: 1.2rem;
    border-radius: 10px;
    color: #fff;
    padding: 15px;
    transition: color 0.3s ease-in-out;
}

.resume-btn:hover,
.email-btn:hover,
.contact-btn:hover{
    background-color: #fff;
    color: var(--orange-color);
    transition: color 0.3s ease-in-out;
}

.profile-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   height: auto;
}


.image-container {
    border-radius: 30px;
    width: 100%;
    height: auto;
    margin-top: 60px;
}


.profile-image {
    width: 100%;
    height: 100%;
    border-radius: 15px;
    object-fit: cover;
}

.media {
    display: flex;
    justify-content: space-evenly;
    width: 70%;
}

/* FOOTER */
footer {
    background-color: var(--orange-color);
    width: 100%;
    text-align: center;
    color: #1b1b1b;
    padding: 20px;
}


@media (max-width: 600px) {
 
/* Sidebar */

.sidebar li a:hover {
    color: var(--orange-color);
}

.sidebar li:hover {
     background-color: #3c3c3c41;
}

.nav-buttons {
    display: none;
}

.sb_menu_btn > img {
    width: 100%;
}

.sb_menu_btn {
    display: flex;
    align-items: center;
    width: 8%;
    position: absolute;
    right: 30px;
    top: 5px;
    border: none;
    border-radius: 5px;
}

.sb-case-studies {
    pointer-events: none;
}

.sidebar {
    display: none;
    position: absolute;
    background-color: #ffffff;
    border-radius: 0px 0px 0px 5px;
    width: 100%;
    top: 50px;
    
}

.sidebar > ul {
    list-style-type: none;
}

li {
    color: #313131;
    padding: 10px;
}

ul {
    padding: 10px 20px;
    width: 100%;
}



.cs-links {
    margin-left: 20px;
    font-weight: 500;
}


/* Nav */
    nav {
    align-items: center;
    align-items: center;
    width: 100%;
    height: 50px;
    padding: 15px;
}

nav > a {
    margin-right: 0px;
    font-size: 1.2rem;
    width: 200px;
    margin-bottom: 20px;
}

.case-studies-btn {
    width: 50px;
}

.cv-btn {
    width: 50px;
}

.contact-btn {
    width: 50px;
}

/* Intro */

.intro > h1 {
    font-size: 6.5rem;
    font-family: var();
}

.intro {
    width: 100%;
    display: flex;
    flex-direction: column;
    place-items: center;
    margin-top: 130px;
    margin-left: 8%;
}

.intro-section {
    background-position: -50px -200px;
    height: 50vh;
}

.intro-section h2 {
    font-size: 2.5rem;
}

.intro-section > .intro > .blurb {
    font-size: 2rem;
    color: #131313;
    text-align: center;
    width: 300px;
    margin-right: 120px;
}

.name {
    color: #131313;
}


/* Landing Cards */
.landing-pages {
    width: 100%;
}

.landing-pages > h1 {
    width: 100%;
}

.landing-pages > .landing-cards > .landing-card {
    display: flex;
    width: 100%;
    height: 25vh;
    position: relative;

}

.landing-pages > .landing-cards .landing-card > .text > h2 {
    font-size: 4rem;
    z-index: 2;
}

.landing-pages > .landing-cards > .landing-card > img {
    top: 50px;
    width: 300.22px;
    height: auto;
    left: 60%;
    z-index: 0;
}

.green-block {
    background-color: #24402A;
    position: absolute;
    top: 10%;
    left: 25%;
    width: 120%;
    height: 205%;
    transform: rotate(-45deg);
    z-index: 0;
}


.landing-pages > .landing-cards .landing-card > .text > p {
    font-size: 1.1rem;
    margin-left: 5px;
    text-align: left;
}

.landing-pages > .landing-cards .landing-card > .text > .landing-button {
    width: 60%;
    padding: 10px 5px;
    margin-top: 5px;
    font-size: 1.1rem;
}



    /* Skills */
    
    .icons {
    width: 25%;
    margin: 30px;
}

.project-gallery {
    height: 50vh;
}

.project-gallery ul {
    padding-top: 0px;
}

.thumbnails {
    height: 200px;
}

/* UI-Design */

.ui-designs {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 50vh;
    background-image: linear-gradient(to bottom, #2a4034, #0c130f);
    position: relative;
    width: 100%;
    overflow: hidden;
}

.ui-designs h1 {
    color: var(--neutral-color);
    text-align: center;
    padding-top: 15px;
}

/* Case Studies */

.case-studies-section {
    display: flex;
    flex-direction: column;
}

.cases {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 1fr;
    gap: 10px;
    height: 30vh;
}

.cases > img {
    height: 100%;
}

.case-text {
    display: flex;
    flex-direction: column;
    width: 100%;
}


.cases > p {
    margin: 10px;
    font-size: .9rem;
}
/*  Call to Action */
    

.connect-form-and-text {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
    margin-left: -70px;
}

.profile-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   height: auto;
   flex: 1;
}

.image-container {
    border-radius: 30px;
    width: 200px;
    height: auto;
    margin-top: 60px;
    margin-left: -70px;
}

.media {
    margin-left: -70px;
}


}
/* ... */

